--- a/views/depression.ejs
+++ b/views/depression.ejs
@@ -2,31 +2,33 @@
     <h1 class="display-4 hero ">About Depression</h1>
 </div>
 <div class="container info">
-    <h4 class="display-5">What is depression?</h4>
-    <p>
+    <button class="display-5">What is depression?</button>
+    <p class="mt-3">
         Feeling down from time to time is a normal part of life, but when emotions such as hopelessness and despair take hold and just won’t go away, you may have depression. More than just sadness in response to life’s struggles and setbacks, depression changes how you think, feel, and function in daily activities. It can interfere with your ability to work, study, eat, sleep, and enjoy life. Just trying to get through the day can be overwhelming.
     </p>
-    <p>
+    <p class="mt-3">
         While some people describe depression as “living in a black hole” or having a feeling of impending doom, others feel lifeless, empty, and apathetic. Men in particular can feel angry and restless. However you experience depression, left untreated it can become a serious health condition. But it’s important to remember that feelings of helplessness and hopelessness are symptoms of depression—not the reality of your situation.
     </p>
-    <p>No matter how hopeless you feel, you can get better. By understanding the cause of your depression and recognizing the different symptoms and types of depression, you can take the first steps to feeling better and overcoming the problem.</p>
-    <h4 class="display-5 info">Signs and symptoms of depression</h4>
-    <p>Depression varies from person to person, but there are some common signs and symptoms. It’s important to remember that these symptoms can be part of life’s normal lows. But the more symptoms you have, the stronger they are, and the longer they’ve lasted—the more likely it is that you’re dealing with depression.</p>
-    <ul class="info">10 common symptoms of depression <br><br>
+    <p class="mt-3">No matter how hopeless you feel, you can get better. By understanding the cause of your depression and recognizing the different symptoms and types of depression, you can take the first steps to feeling better and overcoming the problem.</p>
+    <button class="display-5 info">Signs and symptoms of depression</button>
+    <p class="mt-3">Depression varies from person to person, but there are some common signs and symptoms. It’s important to remember that these symptoms can be part of life’s normal lows. But the more symptoms you have, the stronger they are, and the longer they’ve lasted—the more likely it is that you’re dealing with depression.</p>
+    <ul class="info"><button class="co">common symptoms of depression </button><br><br>
         <li>
-            Feelings of helplessness and hopelessness. A bleak outlook—nothing will ever get better and there’s nothing you can do to improve your situation.
-        </li><br>
+            <strong>Feelings of helplessness and hopelessness:</strong> A bleak outlook—nothing will ever get better and there’s nothing you can do to improve your situation.
+        </li>
         <li>
-            Loss of interest in daily activities. You don’t care anymore about former hobbies, pastimes, social activities, or sex. You’ve lost your ability to feel joy and pleasure.
-        </li><br>
+            <strong>Loss of interest in daily activities:</strong> You don’t care anymore about former hobbies, pastimes, social activities, or sex. You’ve lost your ability to feel joy and pleasure.
+        </li>
        <li>
-        Appetite or weight changes. Significant weight loss or weight gain—a change of more than 5% of body weight in a month.
-       </li><br>
+        <strong>Appetite or weight changes:</strong> Significant weight loss or weight gain—a change of more than 5% of body weight in a month.
+       </li>
        <li>
-        Sleep changes. Either insomnia, especially waking in the early hours of the morning, or oversleeping.
-       </li><br>
+        <strong>Sleep changes:</strong> Either insomnia, especially waking in the early hours of the morning, or oversleeping.
+       </li>
        <li>
-        Anger or irritability. Feeling agitated, restless, or even violent. Your tolerance level is low, your temper short, and everything and everyone gets on your nerves.
-       </li><br>
+        <strong>Anger or irritability:</strong> Feeling agitated, restless, or even violent. Your tolerance level is low, your temper short, and everything and everyone gets on your nerves.
+       </li>
     </ul>
 </div>
+
+
