--- a/views/layout/layout.ejs
+++ b/views/layout/layout.ejs
@@ -14,7 +14,9 @@
 <body>
     <nav>
         <div class="logo">
-            <h4>The Nav</h4>
+            <h4>
+                <a href="/">Nav</a>
+            </h4>
         </div>
         <ul class="nav-links">
             <li>
@@ -24,12 +26,22 @@
                 <a href="/about">About</a>
             </li>
             <li>
-                <a href="/depression">Depression</a>
+                <a href="/quotes">Quotes</a>
             </li>
             <li>
-                <a href="/activities">Activities</a>
-            </li>
+            <div class="dropdown">
+                <a class="btn text-white dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Activities
+                </a>
+              
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="/flappy">Flappy Bird Game</a>
+                  <a class="dropdown-item" href="/patatap">Patatap</a>
+                </div>
+              </div>
+              </li>
         </ul>
+          
         <div class="burger">
             <div class="line1"></div>
             <div class="line2"></div>
@@ -40,10 +52,10 @@
     <%-body %>
 </body>
 <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 <script src="\javascript\app.js"></script>
+<script src="\javascript\snake.js"></script>
 </html>
