--- a/views/layout/layout.ejs
+++ b/views/layout/layout.ejs
@@ -9,13 +9,13 @@
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="\stylesheets\styles.css">
-    <title>Project</title>
+    <title>Wings of Sadness</title>
 </head>
 <body>
     <nav>
         <div class="logo">
             <h4>
-                <a href="/">Nav</a>
+                <a href="/">WOS</a>
             </h4>
         </div>
         <ul class="nav-links">
